Update end date 10 missions

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<h3>10 Missions Media</h3>	
 						<div class="block-date">
 							<div class="date">
-								<p><em>Apr 2008&ndash;Present</em></p>
+								<p><em>Apr 2008&ndash;Feb 2016</em></p>
 							</div>					
 							<p><em>Production and Internet Coordinator</em></p>
 						</div>
