Update Professional Experience

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 							<p><em>Production and Internet Coordinator</em></p>
 						</div>
 						<ul>
+                            <li>Manage multiple domains and configure for content management systems</li>
 							<li>Create website content and templates using HTML, CSS, and Javascript</li>
 							<li>Create HTML email</li>
 							<li>Communicate with print and digital vendors to keep projects progressing and troublseshoot needs as they arise</li>
@@ -46,7 +47,7 @@
 							<p><em>Contract Graphic Designer</em></p>
 					</div>
 						<ul>
-							<li>Created logo, identity system, conference booth graphics, and brochure</li>
+							<li>Create logo, identity system, conference booth graphics, and brochure</li>
 						</ul>
 					</div>
 				</div>
